--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.1.2
 Flask-HTTPAuth==4.1.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.3
+Flask-Testing==0.8.0
 httpie==2.2.0
 idna==2.10
 itsdangerous==1.1.0
@@ -16,7 +17,6 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 pathspec==0.8.0
-pkg-resources==0.0.0
 Pygments==2.6.1
 python-dateutil==2.8.1
 python-editor==1.0.4
