--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,34 @@
-version: '3'
+version: '3.8'
+
 services:
-  web:
-    build: .
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: movie-store-backend
     ports:
       - "5000:5000"
     environment:
-      - ENV_TYPE="PROD_ENV"
+      - ENV_TYPE=PROD_ENV
+      - FLASK_ENV=production
+    networks:
+      - movie-store-network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
+        NEXT_PUBLIC_API_URL: http://backend:5000
+    container_name: movie-store-frontend
+    ports:
+      - "3000:3000"
+    env_file:
+      - ./.env.local
+    networks:
+      - movie-store-network
+
+networks:
+  movie-store-network:
+    driver: bridge
